# SyncTube

./: .gitignore  README.md  audio_image_sync.py  config.yaml  generate_images.py  parse_script.py  pyproject.toml  requirements.txt  screenplay_parser.py  test_script.md
