[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "SyncTube"
version = "0.1.0"
description = "Generate Video from a Scripted Storyline"
authors = ["Navneeth <nav@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
Pillow = "^9.0.0"
pydub = "^0.25.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^22.0"
flake8 = "^4.0"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
exclude = [".venv", "dist", "build"]